# django-easy-faq

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  license  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  test.yml
demo/: demo.md
demo/demo-templates/: base.html  categories_list.html  question_base.html  question_form.html
django_easy_faq.egg-info/: PKG-INFO  SOURCES.txt
example/: requirements.txt
example/example/: settings.py  urls.py  wsgi.py
example/home/: views.py
example/templates/faq/: answer_form.html  base.html  category_detail.html  comments.html  question_detail.html  questions_list.html
faq/: __init__.py  admin.py  apps.py  documentation.md  forms.py  models.py  path_converters.py  snippets.py  tests.py  urls.py  views.py
faq/migrations/: 0001_initial.py  0002_alter_answer_id_alter_answerhelpful_id_and_more.py  0002_auto_20210217_2207.py  0003_auto_20220619_0939.py  0003_category_slug.py  0004_alter_answer_slug_alter_category_slug.py  0004_question_category.py  0005_auto_20210218_1418.py  0005_rename_description_category__description.py  0006_answer_is_rich_text.py  0006_auto_20210218_1543.py  0007_auto_20210218_1911.py  0008_faqcomment_question.py  0009_faqcomment_post_time.py  0010_auto_20210218_1955.py  0011_auto_20210218_2016.py  0012_auto_20210218_2040.py  0013_auto_20210219_1047.py  0014_auto_20210219_1609.py  0015_auto_20210220_2131.py  0016_auto_20210220_2140.py  0017_auto_20210220_2143.py  0018_auto_20210221_1445.py
faq/templates/faq/: answer_form.html  base.html  categories_list.html  category_detail.html  comment_form.html  comments.html  (+5 more)
(+1 files in other folders)
